--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
           name: Chmod permissions
           command: sudo chmod +x ./gradlew
       - run:
+          name: Accept Android SDK Licenses
+          command: yes | sdkmanager --licenses && yes | sdkmanager --update
+      - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
       - save_cache:
