--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name="edu.uwstout.p2pchat.WifiDirect"
+            android:exported="false"/>
     </application>
 
 </manifest>
