--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    androidTestImplementation 'com.21buttons:fragment-test-rule:1.0.0'
 }
