--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name="edu.uwstout.p2pchat.WifiDirect"
             android:exported="false"/>
         <service android:enabled="true"
-            android:name="edu.uwstout.p2pchat.FileTransfer.SendDataService" />
+            android:name="edu.uwstout.p2pchat.WifiDirectHelpers.SendDataService" />
     </application>
 
 </manifest>
